# sounware-reproductor

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  build-appimage.sh  ejecutar.sh  pyproject.toml  pyrightconfig.json  soundwaveRoadmap.md
.design/: green-deck.md  red-broadcast.md
data/: library.db
flatpak/: io.github.manuelprz.soundwave.yml  io.github.soundwave.Soundwave.json  io.github.soundwave.Soundwave.metainfo.xml  soundwave.desktop
scratch/: test_crossfade_fix.py  test_playback.py
src/soundwave/: __main__.py  main.py
src/soundwave/core/: __init__.py  plugin_manager.py
src/soundwave/player/: engine.py  equalizer.py  headphone_presets.py  mpris.py  queue_manager.py
src/soundwave/services/: __init__.py  sync.py
src/soundwave/ui/: equalizer.py  library_cards.py  library_menus.py  library_playlists.py  library_view.py  lyrics_view.py  mini_player.py  player_bar.py  search_bar.py  settings.py  utils.py  visualizer.py  visualizer_discography.py  visualizer_styles.py  waveform_widgets.py  window.py  window_library_scan.py  window_sidebar.py  window_styles.py
src/soundwave/ui/components/: __init__.py  utils.py  waveform_widgets.py
src/soundwave/ui/player/: __init__.py  equalizer.py  mini_player.py  player_bar.py
src/soundwave/ui/settings/: __init__.py  about_page.py  connections_page.py  general_page.py  sync_page.py
src/soundwave/ui/visualizer/: __init__.py  visualizer.py  visualizer_discography.py  visualizer_styles.py
tests/: test_core.py  test_library_sorting.py  test_playlists_m3u8.py  test_plugins.py  test_queue.py  test_sync.py
(+9 files in other folders)
