[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soundwave"
version = "0.1.0"
description = "Un reproductor de música moderno para Linux"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
dependencies = ["mutagen"]

[project.scripts]
soundwave = "soundwave.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soundwave = ["py.typed"]
